unpackaged/main/default/objects/Call_Tracker__c/Call_Tracker__c.object-meta.xml
<CustomObject>
    <description>Object where users can search and look historical data.</description>
    <label>Call Tracker</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Call Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Tracker</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>