unpackaged/main/default/objects/Call_Tracker__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment_Text</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>