unpackaged/main/default/objects/Call_Tracker__c/fields/Completion_date__c.field-meta.xml
<CustomField>
    <fullName>Completion_date__c</fullName>
    <description>This field contains the Completion date of Call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion date</label>
    <type>DateTime</type>
</CustomField>