unpackaged/main/default/objects/Call_Tracker__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>This field contains the Contact Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>