unpackaged/main/default/objects/Call_Tracker__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <description>This field contains the Created Date and Time of Call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Create Date</label>
    <type>DateTime</type>
</CustomField>