unpackaged/main/default/objects/Call_Tracker__c/fields/CreatedBy_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedBy_Last_Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>