unpackaged/main/default/objects/Call_Tracker__c/fields/InHouse_Date__c.field-meta.xml
<CustomField>
    <fullName>InHouse_Date__c</fullName>
    <description>This field contains the InHouse_Date and Time of Call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>InHouse_Date</label>
    <type>DateTime</type>
</CustomField>