unpackaged/main/default/objects/Call_Tracker__c/fields/Inquirer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Inquirer_First_Name__c</fullName>
    <description>This field contains the Inquirer First Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquirer First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>