unpackaged/main/default/objects/Call_Tracker__c/fields/Inquirer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Inquirer_Last_Name__c</fullName>
    <description>This field contains the Inquirer Last Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquirer Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>