unpackaged/main/default/objects/Call_Tracker__c/fields/Inquirer_Type_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Inquirer_Type_Short_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquirer_Type_Short_Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>