unpackaged/main/default/objects/Call_Tracker__c/fields/Inquiry_id__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_id__c</fullName>
    <label>Inquiry_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>