unpackaged/main/default/objects/Call_Tracker__c/fields/Reference_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_First_Name__c</fullName>
    <description>This field contains Reference_First_Name of Call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>