unpackaged/main/default/objects/Call_Tracker__c/fields/Reference_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Last_Name__c</fullName>
    <description>This field contains the Reference_Last_Name of Call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>