unpackaged/main/default/objects/Call_Tracker__c/fields/State_Description__c.field-meta.xml
<CustomField>
    <fullName>State_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Description</label>
    <length>2</length>
    <type>Text</type>
</CustomField>