unpackaged/main/default/objects/Call_Tracker__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status_Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>