unpackaged/main/default/objects/Call_Tracker__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <description>This field contains the Update_Date of Call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Update Date</label>
    <type>DateTime</type>
</CustomField>