unpackaged/main/default/objects/Call_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completion_date__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Reference_First_Name__c</columns>
    <columns>Create_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>